# grokpit

./: .gitignore  README.md
docs/: architecture.md  how-to-connect-main-grok.md  register-as-mcp.md  remote-ios-control.md
grokpit-core/: Cargo.toml
grokpit-core/src/: lib.rs  main.rs  mcp.rs
grokpit-skill/: SKILL.md
policies/: default.toml  example-project.policy.toml
